@@ -23,6 +23,8 @@
     * META.yml distribution_type field now intelligent enough to guess at
       the type rather than hard code 'module'.
     * INSTALLBASE changed to INSTALL_BASE to match Module::Build.
+    * Added a MAKE parameter for Windows users to say if they're using
+      dmake or nmake.
 
 6.30  Fri May 20 16:05:38 PDT 2005
     * PL_FILES behavior tweak again to restore old behavior.  Sometimes its 
